
set(lib_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../.././libs/${ANDROID_ABI})
set(sdl_src_DIR ${CMAKE_CURRENT_SOURCE_DIR}/.././sdl/)

include_directories (${CMAKE_CURRENT_SOURCE_DIR}/../.././include/Urho3D)

# Urho3D library
add_library(Urho3D_lib SHARED IMPORTED)
set_target_properties(Urho3D_lib PROPERTIES IMPORTED_LOCATION
                             ${lib_DIR}/libUrho3D.a)

# Include common to all samples
set (COMMON_SAMPLE_H_FILES "${CMAKE_CURRENT_SOURCE_DIR}/Sample.h" "${CMAKE_CURRENT_SOURCE_DIR}/Sample.inl")

# Define dependency libs
set (INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

add_subdirectory (01_HelloWorld)
add_subdirectory (02_HelloGUI)
add_subdirectory (03_Sprites)
add_subdirectory (04_StaticScene)
add_subdirectory (05_AnimatingScene)
add_subdirectory (06_SkeletalAnimation)
add_subdirectory (07_Billboards)
add_subdirectory (08_Decals)
add_subdirectory (09_MultipleViewports)
add_subdirectory (10_RenderToTexture)
add_subdirectory (11_Physics)
add_subdirectory (12_PhysicsStressTest)
add_subdirectory (13_Ragdolls)
add_subdirectory (14_SoundEffects)
add_subdirectory (15_Navigation)
add_subdirectory (16_Chat)
add_subdirectory (17_SceneReplication)
add_subdirectory (18_CharacterDemo)
add_subdirectory (19_VehicleDemo)
add_subdirectory (20_HugeObjectCount)
add_subdirectory (21_AngelScriptIntegration)
add_subdirectory (22_LuaIntegration)
add_subdirectory (23_Water)
add_subdirectory (24_Urho2DSprite)
add_subdirectory (25_Urho2DParticle)
add_subdirectory (26_ConsoleInput)
add_subdirectory (27_Urho2DPhysics)
add_subdirectory (28_Urho2DPhysicsRope)
add_subdirectory (29_SoundSynthesis)
add_subdirectory (30_LightAnimation)
add_subdirectory (31_MaterialAnimation)
add_subdirectory (32_Urho2DConstraints)
add_subdirectory (33_Urho2DSpriterAnimation)
add_subdirectory (34_DynamicGeometry)
add_subdirectory (35_SignedDistanceFieldText)
add_subdirectory (36_Urho2DTileMap)
add_subdirectory (37_UIDrag)
add_subdirectory (38_SceneAndUILoad)
add_subdirectory (39_CrowdNavigation)
add_subdirectory (40_Localization)
add_subdirectory (42_PBRMaterials)
add_subdirectory (43_HttpRequestDemo)
# add_subdirectory (44_RibbonTrailDemo)